# glTF-Viewer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
bgfx.cmake/: CMakeLists.txt
data/: README.md
data/doctor/: license.txt  scene.gltf
src/: Sources.cmake  gltf_loader.cpp  gltf_loader.h  viewer_main.cpp
